Update vendor using official bootstrap sass repo

--- a/lib/build.scss
+++ b/lib/build.scss
@@ -1,3 +1,3 @@
-@import "../components/sass-bootstrap/lib/variables";
-@import "../components/sass-bootstrap/lib/mixins";
+@import "vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/variables";
+@import "vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/mixins";
 @import "select2-bootstrap.scss";
