--- a/docs/css/select2-bootstrap.css
+++ b/docs/css/select2-bootstrap.css
@@ -18,8 +18,7 @@
   display: block;
   /* 1 */
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /**
  * Adjust Select2 inputs to fit Bootstrap 3 default .form-control appearance.
@@ -36,8 +35,7 @@
   background-color: white;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-}
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 
 .select2-search input {
   border-color: #cccccc;
@@ -47,29 +45,25 @@
   background-color: white;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-}
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 
 .select2-container .select2-choices .select2-search-field input {
   -webkit-box-shadow: none;
-  box-shadow: none;
-}
+  box-shadow: none; }
 
 /**
  * Adjust Select2 input heights to match the Bootstrap default.
  */
 .select2-container .select2-choice {
   height: 34px;
-  line-height: 1.42857;
-}
+  line-height: 1.42857; }
 
 /**
  * Address Multi Select2's height which - depending on how many elements have been selected -
  * may grown higher than their initial size.
  */
 .select2-container.select2-container-multi.form-control {
-  height: auto;
-}
+  height: auto; }
 
 /**
  * Address Bootstrap 3 control sizing classes
@@ -79,29 +73,24 @@
 .input-group-sm .select2-container .select2-choice {
   height: 30px;
   line-height: 1.5;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .select2-container.input-lg .select2-choice,
 .input-group-lg .select2-container .select2-choice {
-  height: 45px;
+  height: 46px;
   line-height: 1.33;
-  border-radius: 6px;
-}
+  border-radius: 6px; }
 
 .select2-container-multi .select2-choices .select2-search-field input {
-  height: 32px;
-}
+  height: 32px; }
 
 .select2-container-multi.input-sm .select2-choices .select2-search-field input,
 .input-group-sm .select2-container-multi .select2-choices .select2-search-field input {
-  height: 28px;
-}
+  height: 28px; }
 
 .select2-container-multi.input-lg .select2-choices .select2-search-field input,
 .input-group-lg .select2-container-multi .select2-choices .select2-search-field input {
-  height: 43px;
-}
+  height: 44px; }
 
 /**
  * Adjust height and line-height for .select2-search-field amd multi-select Select2 widgets.
@@ -109,14 +98,12 @@
  * 1. Class repetition to address missing .select2-chosen in Select2 < 3.3.2.
  */
 .select2-container-multi .select2-choices .select2-search-field input {
-  margin: 0;
-}
+  margin: 0; }
 
 .select2-chosen,
 .select2-choice > span:first-child,
 .select2-container .select2-choices .select2-search-field input {
-  padding: 6px 12px;
-}
+  padding: 6px 12px; }
 
 .input-sm .select2-chosen,
 .input-group-sm .select2-chosen,
@@ -124,8 +111,7 @@
 .input-group-sm .select2-choice > span:first-child,
 .input-sm .select2-choices .select2-search-field input,
 .input-group-sm .select2-choices .select2-search-field input {
-  padding: 5px 10px;
-}
+  padding: 5px 10px; }
 
 .input-lg .select2-chosen,
 .input-group-lg .select2-chosen,
@@ -133,24 +119,20 @@
 .input-group-lg .select2-choice > span:first-child,
 .input-lg .select2-choices .select2-search-field input,
 .input-group-lg .select2-choices .select2-search-field input {
-  padding: 10px 16px;
-}
+  padding: 10px 16px; }
 
 .select2-container-multi .select2-choices .select2-search-choice {
   margin-top: 5px;
-  margin-bottom: 3px;
-}
+  margin-bottom: 3px; }
 
 .select2-container-multi.input-sm .select2-choices .select2-search-choice,
 .input-group-sm .select2-container-multi .select2-choices .select2-search-choice {
   margin-top: 3px;
-  margin-bottom: 2px;
-}
+  margin-bottom: 2px; }
 
 .select2-container-multi.input-lg .select2-choices .select2-search-choice,
 .input-group-lg .select2-container-multi .select2-choices .select2-search-choice {
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 /**
  * Adjust the single Select2's dropdown arrow button appearance.
@@ -161,15 +143,13 @@
 .select2-container .select2-choice div {
   border-left: 1px solid #cccccc;
   background: none;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-}
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 
 .select2-dropdown-open .select2-choice .select2-arrow,
 .select2-dropdown-open .select2-choice div {
   border-left-color: transparent;
   background: none;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-}
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 
 /**
  * Adjust the dropdown arrow button icon position for the single-select Select2 elements
@@ -179,41 +159,35 @@
  */
 .select2-container .select2-choice .select2-arrow b,
 .select2-container .select2-choice div b {
-  background-position: 0 3px;
-}
+  background-position: 0 3px; }
 
 .select2-dropdown-open .select2-choice .select2-arrow b,
 .select2-dropdown-open .select2-choice div b {
-  background-position: -18px 3px;
-}
+  background-position: -18px 3px; }
 
 .select2-container.input-sm .select2-choice .select2-arrow b,
 .input-group-sm .select2-container .select2-choice .select2-arrow b,
 .select2-container.input-sm .select2-choice div b,
 .input-group-sm .select2-container .select2-choice div b {
-  background-position: 0 1px;
-}
+  background-position: 0 1px; }
 
 .select2-dropdown-open.input-sm .select2-choice .select2-arrow b,
 .input-group-sm .select2-dropdown-open .select2-choice .select2-arrow b,
 .select2-dropdown-open.input-sm .select2-choice div b,
 .input-group-sm .select2-dropdown-open .select2-choice div b {
-  background-position: -18px 1px;
-}
+  background-position: -18px 1px; }
 
 .select2-container.input-lg .select2-choice .select2-arrow b,
 .input-group-lg .select2-container .select2-choice .select2-arrow b,
 .select2-container.input-lg .select2-choice div b,
 .input-group-lg .select2-container .select2-choice div b {
-  background-position: 0 9px;
-}
+  background-position: 0 9px; }
 
 .select2-dropdown-open.input-lg .select2-choice .select2-arrow b,
 .input-group-lg .select2-dropdown-open .select2-choice .select2-arrow b,
 .select2-dropdown-open.input-lg .select2-choice div b,
 .input-group-lg .select2-dropdown-open .select2-choice div b {
-  background-position: -18px 9px;
-}
+  background-position: -18px 9px; }
 
 /**
  * Address Bootstrap's validation states and change Select2's border colors and focus states.
@@ -221,54 +195,42 @@
  */
 .has-warning .select2-choice,
 .has-warning .select2-choices {
-  border-color: #c09853;
-}
+  border-color: #8a6d3b; }
 .has-warning .select2-container-active .select2-choice,
 .has-warning .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #a47e3c;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
-}
+  border-color: #66512c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b; }
 .has-warning.select2-drop-active {
-  border-color: #a47e3c;
-}
-.has-warning.select2-drop-active.select2-drop.select2-drop-above {
-  border-top-color: #a47e3c;
-}
+  border-color: #66512c; }
+  .has-warning.select2-drop-active.select2-drop.select2-drop-above {
+    border-top-color: #66512c; }
 
 .has-error .select2-choice,
 .has-error .select2-choices {
-  border-color: #b94a48;
-}
+  border-color: #a94442; }
 .has-error .select2-container-active .select2-choice,
 .has-error .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #953b39;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-}
+  border-color: #843534;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483; }
 .has-error.select2-drop-active {
-  border-color: #953b39;
-}
-.has-error.select2-drop-active.select2-drop.select2-drop-above {
-  border-top-color: #953b39;
-}
+  border-color: #843534; }
+  .has-error.select2-drop-active.select2-drop.select2-drop-above {
+    border-top-color: #843534; }
 
 .has-success .select2-choice,
 .has-success .select2-choices {
-  border-color: #468847;
-}
+  border-color: #3c763d; }
 .has-success .select2-container-active .select2-choice,
 .has-success .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #356635;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-}
+  border-color: #2b542c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168; }
 .has-success.select2-drop-active {
-  border-color: #356635;
-}
-.has-success.select2-drop-active.select2-drop.select2-drop-above {
-  border-top-color: #356635;
-}
+  border-color: #2b542c; }
+  .has-success.select2-drop-active.select2-drop.select2-drop-above {
+    border-top-color: #2b542c; }
 
 /**
  * Make Select2's active-styles - applied to .select2-container when the widget receives focus -
@@ -281,17 +243,14 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-}
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
 
 .select2-drop-active {
-  border-color: #66afe9;
-}
+  border-color: #66afe9; }
 
 .select2-drop-auto-width,
 .select2-drop.select2-drop-above.select2-drop-active {
-  border-top-color: #66afe9;
-}
+  border-top-color: #66afe9; }
 
 /**
  * Select2 widgets in Bootstrap Input Groups
@@ -313,31 +272,26 @@
  */
 .input-group.select2-bootstrap-prepend [class^="select2-choice"] {
   border-bottom-left-radius: 0 !important;
-  border-top-left-radius: 0 !important;
-}
+  border-top-left-radius: 0 !important; }
 
 .input-group.select2-bootstrap-append [class^="select2-choice"] {
   border-bottom-right-radius: 0 !important;
-  border-top-right-radius: 0 !important;
-}
+  border-top-right-radius: 0 !important; }
 
 .select2-dropdown-open [class^="select2-choice"] {
   border-bottom-right-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
+  border-bottom-left-radius: 0 !important; }
 
 .select2-dropdown-open.select2-drop-above [class^="select2-choice"] {
   border-top-right-radius: 0 !important;
-  border-top-left-radius: 0 !important;
-}
+  border-top-left-radius: 0 !important; }
 
 /**
  * Adjust Select2's choices hover and selected styles to match Bootstrap 3's default dropdown styles.
  */
 .select2-results .select2-highlighted {
   color: white;
-  background-color: #428bca;
-}
+  background-color: #428bca; }
 
 /**
  * Adjust alignment of Bootstrap 3 buttons in Bootstrap 3 Input Groups to address
@@ -350,8 +304,7 @@
 .select2-bootstrap-prepend .select2-container-multiple,
 .select2-bootstrap-prepend .input-group-btn,
 .select2-bootstrap-prepend .input-group-btn .btn {
-  vertical-align: top;
-}
+  vertical-align: top; }
 
 /**
  * Make Multi Select2's choices match Bootstrap 3's default button styles.
@@ -362,24 +315,21 @@
   border-color: #cccccc;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   -webkit-box-shadow: none;
-  box-shadow: none;
-}
+  box-shadow: none; }
 
 .select2-container-multi .select2-choices .select2-search-choice-focus {
   background: #ebebeb;
   border-color: #adadad;
   color: #333333;
   -webkit-box-shadow: none;
-  box-shadow: none;
-}
+  box-shadow: none; }
 
 /**
  * Address Multi Select2's choice close-button vertical alignment.
  */
 .select2-search-choice-close {
   margin-top: -7px;
-  top: 50%;
-}
+  top: 50%; }
 
 /**
  * Adjust the single Select2's clear button position (used to reset the select box
@@ -387,8 +337,7 @@
  * activated by Select2's "allowClear" option).
  */
 .select2-container .select2-choice abbr {
-  top: 50%;
-}
+  top: 50%; }
 
 /**
  * Adjust "no results" and "selection limit" messages to make use
@@ -400,8 +349,7 @@
 .select2-results .select2-searching,
 .select2-results .select2-selection-limit {
   background-color: #fcf8e3;
-  color: #c09853;
-}
+  color: #8a6d3b; }
 
 /**
  * Address disabled Select2 styles.
@@ -414,16 +362,14 @@
 .select2-container.select2-container-disabled .select2-choices {
   cursor: not-allowed;
   background-color: #eeeeee;
-  border-color: #cccccc;
-}
-.select2-container.select2-container-disabled .select2-choice .select2-arrow,
-.select2-container.select2-container-disabled .select2-choice div,
-.select2-container.select2-container-disabled .select2-choices .select2-arrow,
-.select2-container.select2-container-disabled .select2-choices div {
-  background-color: transparent;
-  border-left: 1px solid transparent;
-  /* 2 */
-}
+  border-color: #cccccc; }
+  .select2-container.select2-container-disabled .select2-choice .select2-arrow,
+  .select2-container.select2-container-disabled .select2-choice div,
+  .select2-container.select2-container-disabled .select2-choices .select2-arrow,
+  .select2-container.select2-container-disabled .select2-choices div {
+    background-color: transparent;
+    border-left: 1px solid transparent;
+    /* 2 */ }
 
 /**
  * Address Select2's loading indicator position - which should not stick
@@ -452,5 +398,4 @@
   background-position: 99%;
   /* 4 */
   background-position: right 4px center;
-  /* 5 */
-}
+  /* 5 */ }
